yamlファイルの構造を変更

--- a/wrr-config.yml
+++ b/wrr-config.yml
@@ -1,23 +1,41 @@
 example.com:
-  IN:
-    A:
-      ip:
-      - 127.0.0.1 100 60
-      num: "1"
-      ttl: "15"
+  a:
+    ip:
+    - - 127.0.0.1
+      - "100"
+      - "60"
+    num: 1
 web.sai.test:
-  IN:
-    A:
-      ip:
-      - 192.168.11.21 10.0000 60
-      - 192.168.11.22 10.0000 50
-      - 192.168.11.23 10.0000 40
-      - 192.168.11.24 10.0000 30
-      - 192.168.11.25 10.0000 20
-      - 192.168.11.26 1.0000 10
-      - 192.168.11.27 10.0000 70
-      - 192.168.11.28 10.0000 80
-      - 192.168.11.29 10.0000 90
-      - 192.168.11.30 10.0000 1000
-      num: "3"
-      ttl: "60"
+  a:
+    ip:
+    - - 192.168.11.21
+      - "99.5000"
+      - "60"
+    - - 192.168.11.22
+      - "0.0000"
+      - "60"
+    - - 192.168.11.23
+      - "0.0000"
+      - "60"
+    - - 192.168.11.24
+      - "0.0000"
+      - "60"
+    - - 192.168.11.25
+      - "0.0000"
+      - "60"
+    - - 192.168.11.26
+      - "0.0000"
+      - "60"
+    - - 192.168.11.27
+      - "0.0000"
+      - "60"
+    - - 192.168.11.28
+      - "0.0000"
+      - "60"
+    - - 192.168.11.29
+      - "0.0000"
+      - "60"
+    - - 192.168.11.30
+      - "0.0000"
+      - "60"
+    num: 1
